# CleanArchitecture

./: CMakeLists.txt  LICENSE  README.md  demo.sh
include/entities/: User.h
include/frameworks_drivers/: InMemoryUserRepository.h
include/interface_adapters/: ConsoleView.h  UserController.h  UserPresenter.h
include/use_cases/: IUserRepository.h  UserManager.h  UserUseCaseInterfaces.h
src/: main.cpp
src/entities/: User.cpp
src/frameworks_drivers/: InMemoryUserRepository.cpp
src/interface_adapters/: ConsoleView.cpp  UserController.cpp  UserPresenter.cpp
src/use_cases/: UserManager.cpp
